[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ask_test_util"
authors = [{name = "João Marcos", email = "jmarcosdo@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
"ask_sdk_core==1.18.0",
"ask_smapi_model==1.19.0",
"ask_smapi_sdk==1.0.0"
]


[project.urls]
Home = "https://github.com/JaoMarcos/ask_test_util"

[tool.flit.module]
name = "ask_test_util"


[tool.pylint]
max-line-length = 100
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]